Implemented functionality to update local storage when cards are moved between columns.

--- a/assign2/public/styles2.css
+++ b/assign2/public/styles2.css
@@ -129,4 +129,5 @@ h3 {
 
 .edit, .startMove, .delete {
     margin: 0 -2.5px;           /* TODO: Remove spacing between the buttons. */
+    /* fill: #ffffff; */
 }
