Fixed styling requirements in styles2.css. Cleaned up code in JS files.

--- a/assign2/public/styles2.css
+++ b/assign2/public/styles2.css
@@ -21,7 +21,8 @@
     position: fixed;
     right: 10px;
     display: flex;
-    align-items: center;
+    /* justify-content: center; */
+    /* align-items: center; */
 }
 
 /* Step 2.1 */
@@ -55,7 +56,6 @@ header {
 
 /* Step 2.3 */
 #addCard {
-    padding: 0.5rem 0;  /* Step 2.2 */
     display: flex;
     column-gap: 0.5rem;
 }
@@ -98,13 +98,13 @@ header {
     background-color: var(--color--doing);
 }
 
-.column {
-    padding: 0 0.5rem 3rem;  /* Step 2.7 */
-    width: 100%;  /* Step 2.4 and 2.5 */
+.column { /* #todo, #doing, #done */
+    padding: 0 0.5rem 3rem;  /* Step 2.4 and 2.7 */
+    flex: 1;  /* Step 2.4 and 2.5 */
 }
 
 .columnTitle {
-    padding: 1rem 1rem 0 1rem;
+    margin: 1rem 1rem 0 1rem;
 }
 
 /* Step 2.5 */
@@ -125,6 +125,7 @@ h3 {
     position: absolute;
     top: 0.5rem;
     right: 0.5rem;
+    display: flex;  /* Remove spacing between the buttons. */
 }
 
 .card:hover .buttons {
@@ -138,7 +139,3 @@ h3 {
 .startMove{
     background-color: red;
 } */
-
-.edit, .startMove, .delete {
-    margin: 0 -2.5px;           /* TODO: Remove spacing between the buttons. */
-}
